--- a/styles/shows.css
+++ b/styles/shows.css
@@ -546,13 +546,13 @@ html, body {
 }
 @media (min-width: 768px) and (max-width: 1279px) {
   .hero {
-    background-position: right;
+    background-position: center;
+    height: 65vw;
   }
-  .hero__title {
-    padding: 3rem;
+  .hero__text {
+    padding: 0.625rem 0 2.5rem 1.875rem;
   }
   .hero__album {
-    padding: 1.25rem 3rem;
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 400;
@@ -573,14 +573,13 @@ html, body {
 }
 @media (min-width: 768px) and (max-width: 1279px) {
   .hero__soundcloud {
-    max-width: 90vw;
-    max-height: 20vw;
+    max-width: 50vw;
+    height: 40%;
     display: flex;
     align-content: center;
     justify-content: center;
-    margin-left: 45px;
-    padding-right: 25px;
-    margin-bottom: 0px;
+    margin-left: 2.8125rem;
+    margin-bottom: 0.625rem;
   }
 }
 @media (min-width: 1280px) {
