--- a/styles/shows.css
+++ b/styles/shows.css
@@ -573,8 +573,8 @@ html, body {
 }
 @media (min-width: 768px) and (max-width: 1279px) {
   .hero__soundcloud {
-    max-width: 50vw;
-    height: 40%;
+    max-width: 45vw;
+    height: 50%;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -584,9 +584,44 @@ html, body {
 }
 @media (min-width: 1280px) {
   .hero {
-    height: 90vh;
+    height: 40vw;
+    background-position: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
   }
-  .hero__title {
-    padding: 5rem;
+  .hero__text {
+    padding: 0.625rem 0 2.5rem 1.875rem;
+  }
+  .hero__album {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+    font-family: "Avenir Next Demi";
+  }
+}
+@media (min-width: 1280px) and (min-width: 768px) and (max-width: 1279px) {
+  .hero__album {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) and (min-width: 1280px) {
+  .hero__album {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .hero__soundcloud {
+    max-width: 30vw;
+    height: 25%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-left: 2.8125rem;
+    margin-bottom: 0.625rem;
+    border-radius: 0.3125rem;
   }
 }/*# sourceMappingURL=shows.css.map */
