--- a/styles/shows.css
+++ b/styles/shows.css
@@ -624,4 +624,24 @@ html, body {
     margin-bottom: 0.625rem;
     border-radius: 0.3125rem;
   }
+}
+
+.shows__title {
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: 600;
+  font-family: "Avenir Next Demi";
+  padding: 1.875rem;
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .shows__title {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+  }
+}
+@media (min-width: 1280px) {
+  .shows__title {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+  }
 }/*# sourceMappingURL=shows.css.map */
