--- a/styles/shows.css
+++ b/styles/shows.css
@@ -626,7 +626,7 @@ html, body {
   }
 }
 
-.shows__title {
+.shows__main-title {
   font-size: 2rem;
   line-height: 2rem;
   font-weight: 600;
@@ -634,14 +634,76 @@ html, body {
   padding: 1.875rem;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
-  .shows__title {
+  .shows__main-title {
     font-size: 3.75rem;
     line-height: 4.25rem;
   }
 }
 @media (min-width: 1280px) {
-  .shows__title {
+  .shows__main-title {
     font-size: 3.75rem;
     line-height: 4.25rem;
+  }
+}
+.shows .shows-list {
+  /* style for the elements created in JavaScript */
+}
+.shows .shows-list__shows-array {
+  list-style-type: none;
+}
+.shows .shows-list__title {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-family: "Avenir Next Regular";
+  color: #AFAFAF;
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .shows .shows-list__title {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .shows .shows-list__title {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+.shows .shows-list__item {
+  padding: 20px;
+  border-bottom: 2px solid #AFAFAF;
+}
+.shows .shows-list__date {
+  padding-bottom: 1.25rem;
+}
+.shows .shows-list__venue {
+  padding-bottom: 1.25rem;
+}
+.shows .shows-list__location {
+  padding-bottom: 1.25rem;
+}
+.shows .shows-list__btn {
+  border-radius: 0.25rem;
+  border: none;
+  width: 75%;
+  height: 3rem;
+  color: #FFFFFF;
+  background-color: #323232;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 400;
+  font-family: "Avenir Next Demi";
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .shows .shows-list__btn {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+  }
+}
+@media (min-width: 1280px) {
+  .shows .shows-list__btn {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
   }
 }/*# sourceMappingURL=shows.css.map */
