--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -8,7 +8,7 @@
 };
 
 @mixin tablet {
-    @media (min-width: 768px) and (max-width: 1279px) {
+    @media (min-width: 768px) {
         @content;
     }
 };
@@ -116,6 +116,21 @@
     }
 }
 
+@mixin shows-titles{
+    font-size: .8125rem;
+    line-height: 1.125rem;
+    font-weight: 600;
+    font-family: "Avenir Next Demi";
+    
+    @include tablet {
+        font-size: .875rem;
+        line-height: 1.375rem;
+    }
+    @include desktop {
+        font-size: .875rem;
+        line-height: 1.375rem;
+    }
+}
 
 @mixin flex-center {
     display: flex;
