--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -79,7 +79,7 @@
 
     &__main-title{
         @include page-header;
-        padding: 1.875rem;
+        padding: 3rem 1rem 1rem 1rem;
 
     }
     .shows-list{
@@ -88,17 +88,21 @@
         }
         
         /* style for the elements created in JavaScript */
-        &__title{
-            @include body;
+        &__title-date, &__title-venue, &__title-shows{
+            @include shows-titles;
             color: $sliver;
+            padding-bottom: .625rem;
         }
         &__item{
-            padding: 20px;
-            border-bottom: 2px solid $sliver;
+            padding: 1.25rem;
+            border-bottom: .125rem solid $mercury;
+            @include body;
     
         }
         &__date{
             padding-bottom: 1.25rem;
+            font-weight: 600;
+            @include shows-titles;
     
         }
         &__venue{
@@ -112,14 +116,45 @@
         &__btn{
             border-radius: 0.25rem;
             border: none;
-            width: 75%;
+            width: 100%;
             height: 3rem;
             color: $white;
             background-color: $bandSite-black;
-            @include section-header;
-            
-    
+            @include subheader;
         }
 
+    }
+    @include tablet{
+        display: flex;
+        flex-direction: column;
+
+    &__main-title{
+        @include section-header;
+        padding: 3rem;
+
+    }
+    .shows-list{
+        /* style for the elements created in JavaScript */
+        &__title-date, &__title-venue, &__title-shows {
+            @include shows-titles;
+            padding-bottom: .625rem;
+            display: flex;
+        }
+        &__item{
+            padding: 1.25rem;
+            border-bottom: .0625rem solid $mercury;
+            @include body;
+            display: flex;
+            justify-content: space-around;
+    
+        }
+        &__btn{
+            width: 18%;
+            height: 3rem;
+            @include shows-titles;
+            // margin-left: 50px;
+        }
+
+    }
     }
 }
